[package]
name = "lsm-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9.0"
fixedbitset = "0.5.7"
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["rt"] }
chrono = "0.4.40"
hdrhistogram = "7.5.4"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
deepsize = "0.2.0"